src/test/ui/regions/regions-assoc-type-in-supertrait-outlives-container.stderr
error[E0491]: in type `&'a WithAssoc<TheType<'b>>`, reference has a longer lifetime than the data it references
  --> $DIR/regions-assoc-type-in-supertrait-outlives-container.rs:42:13
   |
LL |     let _x: &'a WithAssoc<TheType<'b>> = loop { };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the function body at 34:15
  --> $DIR/regions-assoc-type-in-supertrait-outlives-container.rs:34:15
   |
LL | fn with_assoc<'a,'b>() {
   |               ^^
note: but the referenced data is only valid for the lifetime 'b as defined on the function body at 34:18
  --> $DIR/regions-assoc-type-in-supertrait-outlives-container.rs:34:18
   |
LL | fn with_assoc<'a,'b>() {
   |                  ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
